--- a/package.json
+++ b/package.json
@@ -7,15 +7,15 @@
 		"test": "jest"
 	},
 	"dependencies": {
-		"axios": "^0.16.2",
+		"axios": "^0.19.0",
 		"react": "16.0.0-alpha.12",
-		"react-native": "0.48.3"
+		"react-native": "^0.60.3"
 	},
 	"devDependencies": {
-		"babel-jest": "21.0.2",
+		"babel-jest": "^24.8.0",
 		"babel-preset-react-native": "3.0.2",
 		"eslint-config-rallycoding": "^3.2.0",
-		"jest": "21.0.2",
+		"jest": "^24.8.0",
 		"react-test-renderer": "16.0.0-alpha.12"
 	},
 	"jest": {
